style/widgets.scss
@import "theme";
@import "utils";


.toolbar-spacer {
  margin-right: 40px;
}


.toolbar-button {
  padding-left: 8px;
  padding-right: 8px;
  font-size: $toolbar-icon-size;
  color: $toolbar-icon-color;

  .icon {
    width: $toolbar-icon-size;

    &.adjust-smaller {
      font-size: $toolbar-icon-size - 3px;
    }
  }

  &:hover {
    background-color: $toolbar-icon-hover-color;
  }

  &.selected {
    color: $toolbar-icon-selected-color;
    background-color: $timeline-progress-bg-color;
  }

  &.disabled {
    color: grey;
  }

  &.disabled:hover {
    background-color: transparent;
  }
}

.combo-label {
  .icon-wrapper .icon {
    font-size: 0.7em;
  }

  .icon-displacement.active {
    position: relative;
    top: 0.2em;
  }

  .label, .editable-label {
    margin-left: 5px;
  }

}

.editable-label {
  color: $font-color;
  background: rgba(0, 0, 0, 0);
  border: none;
  outline: none;
}

.select-label {
  cursor: pointer;
  color: grey;
  margin: 0;

  &.selected {
    font-weight: bolder;
    color: white;
    cursor: default;
  }
}

.multi-select-label {
  display: flex;

  .spacer {
    margin-left: 0.3rem;
    margin-right: 0.3rem;
    margin-bottom: 0;
    margin-top: 0;
  }
}


.bool-select-label {
  .bool-true.selected {
    color: #32CD32;
  }

  .bool-false.selected {
    color: red;
  }
}


.modal {
  display: block;

  .modal-header {
    border-bottom: none;
    display: flex;
    justify-content: center;
  }

  .modal-content {
      background-color: $modal-bg-color;
      border-top-color: $modal-border-color;
      border-bottom-color: $modal-border-color;
      border-width: 2px;

      max-width: 600px !important;
      min-width: 600px;
      margin-top: 100px !important;
  }
}


.dropdown {

  .dropdown-menu {
    background-color: $dropdown-menu-bg-color;

    // HACK: a special workaround for internal "SimpleBar" scrollbars
    .simplebar-track {
      background-color: $dropdown-menu-bg-color;
    }
  }


  .dropdown-item {
    color: $dropdown-menu-font-color;

    &:focus, &:hover {
      background-color: $dropdown-menu-hover-color;
    }

    &.disabled {
      color: $dropdown-menu-disabled-color;

      &:hover {
        background-color: $dropdown-menu-bg-color;
      }
    }

    .icon {
      width: 22px;
    }
  }


  .dropdown-submenu {
    position: relative;
  }

  .dropdown-submenu>.dropdown-menu {
    top: 0;
    left: 100%;
    margin-top: -6px;
    margin-left: -1px;
    -webkit-border-radius: 0 6px 6px 6px;
    -moz-border-radius: 0 6px 6px;
    border-radius: 0 6px 6px 6px;
  }


  .dropdown-submenu:hover>.dropdown-menu {
      display: block;
  }

  .dropdown-submenu>.dropdown-item:after {
      display: block;
      content: " ";
      float: right;
      width: 0;
      height: 0;
      border-color: transparent;
      border-style: solid;
      border-width: 5px 0 5px 5px;
      border-left-color: #ccc;
      margin-top: 5px;
      margin-right: -10px;
  }

  .dropdown-submenu:hover>.dropdown-item:after {
      border-left-color: #fff;
  }

  .dropdown-overlay {
      position: fixed;
      top: 0px;
      bottom: 0px;
      right: 0px;
      left: 0px;
      z-index: 1;
  }
}

.icon {
  display: inline-block;
  text-align: center;

}


.simplebar-scrollbar {
  background: $scrollbar-color!important;
}


.option-item {
  display: flex;
  justify-content: space-between;

  margin-bottom: 0.5rem;
  border-bottom-style:solid;
  border-bottom-width: 1px;
  border-color: transparent;;

  &:hover {
    border-color: #2F4F4F;
  }

  .title {
    margin-bottom: 0px;
  }
  .padding {
    flex-grow: 2;
  }

  // inner widgets
  .editable-label {
    text-align: right;
  }
}

